--- a/index.html
+++ b/index.html
@@ -70,14 +70,22 @@
     <p>The table below shows nutritional values per serving without the additional fillings.</p>
 
     <table>
-      Calories
-      277kcal
-      Carbs
-      0g
-      Protein
-      20g
-      Fat
-      22g
+      <tr>
+        <th>Calories</th>
+        <td>277kcal</td>
+      </tr>
+      <tr>
+        <th>Carbs</th>
+        <td>0g</td>
+      </tr>
+      <tr>
+        <th>Protein</th>
+        <td>20g</td>
+      </tr>
+      <tr>
+        <th>Fat</th>
+        <td>22g</td>
+      </tr>
     </table>
   </main>
   
