--- a/index.html
+++ b/index.html
@@ -7,15 +7,13 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Recipe page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  
+  <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
   <main>
+    <img src="assets/images/image-omelette.jpeg" alt="An Omelette on a plate" />
+    
     <h1>Simple Omelette Recipe</h1>
 
     <p>
