--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <main>
     <img src="assets/images/image-omelette.jpeg" alt="An Omelette on a plate" />
-    
+
     <h1>Simple Omelette Recipe</h1>
 
     <p>
@@ -23,16 +23,16 @@
 
     <section>
       <h2>Preparation time</h2>
-      <ul>
-        <li>Total: Approximately 10 minutes</li>
-        <li>Preparation: 5 minutes</li>
-        <li>Cooking: 5 minutes</li>
+      <ul class="preparation">
+        <li><b>Total:</b> Approximately 10 minutes</li>
+        <li><b>Preparation:</b> 5 minutes</li>
+        <li><b>Cooking:</b> 5 minutes</li>
       </ul>
     </section>
 
-    <h2>Ingredients</h2>
+    <h3>Ingredients</h3>
 
-    <ul>
+    <ul class="ingredients">
       <li>2-3 large eggs</li>
       <li>Salt, to taste</li>
       <li>Pepper, to taste</li>
@@ -40,30 +40,34 @@
       <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
     </ul>
 
-    <h2>Instructions</h2>
+    <hr />
+
+    <h3 class="instructions">Instructions</h3>
 
     <ol>
       <li>
-        Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed.
+        <b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed.
         You can add a tablespoon of water or milk for a fluffier texture.
       </li>
-      <li>Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.</li>
+      <li><b>Heat the pan:</b> Place a non-stick frying pan over medium heat and add butter or oil.</li>
       <li>
-        Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure
+        <b>Cook the omelette:</b> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure
         the eggs evenly coat the surface.
       </li>
       <li>
-        Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the
+        <b>Add fillings (optional):</b> When the eggs begin to set at the edges but are still slightly runny in the
         middle, sprinkle your chosen fillings over one half of the omelette.
       </li>
       <li>
-        Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the
+        <b>Fold and serve:</b> As the omelette continues to cook, carefully lift one edge and fold it over the
         fillings. Let it cook for another minute, then slide it onto a plate.
       </li>
-      <li>Enjoy: Serve hot, with additional salt and pepper if needed.</li>
+      <li><b>Enjoy:</b> Serve hot, with additional salt and pepper if needed.</li>
     </ol>
 
-    <h2>Nutrition</h2>
+    <hr />
+
+    <h3>Nutrition</h3>
 
     <p>The table below shows nutritional values per serving without the additional fillings.</p>
 
