Imported an external font-family and utilized two different font styles within the webpage. Further adjusted the font colors, adjusted the text sizes in response to the addition of a font-family, and adjusted the margins as well as borders of the table within the 'Nutrition' section.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <title>Frontend Mentor | Recipe page</title>
   
   <link rel="stylesheet" type="text/css" href="style.css" />
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Outfit:wght@100..900&family=Young+Serif&display=swap');
+  </style>
 </head>
 <body>
   <main>
@@ -73,16 +76,16 @@
 
     <table>
       <tr>
-        <th>Calories</th>
-        <td>277kcal</td>
+        <th class="border-bottom">Calories</th>
+        <td class="border-bottom">277kcal</td>
       </tr>
       <tr>
-        <th>Carbs</th>
-        <td>0g</td>
+        <th class="border-bottom">Carbs</th>
+        <td class="border-bottom">0g</td>
       </tr>
       <tr>
-        <th>Protein</th>
-        <td>20g</td>
+        <th class="border-bottom">Protein</th>
+        <td class="border-bottom">20g</td>
       </tr>
       <tr>
         <th>Fat</th>
