--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 
     <h3>Nutrition</h3>
 
-    <p>The table below shows nutritional values per serving without the additional fillings.</p>
+    <p class="nutrition">The table below shows nutritional values per serving without the additional fillings.</p>
 
     <table>
       <tr>
-        <th class="border-bottom">Calories</th>
-        <td class="border-bottom">277kcal</td>
+        <th class="border-bottom" class="top-cell">Calories</th>
+        <td class="border-bottom" class="top-cell">277kcal</td>
       </tr>
       <tr>
         <th class="border-bottom">Carbs</th>
@@ -88,15 +88,15 @@
         <td class="border-bottom">20g</td>
       </tr>
       <tr>
-        <th>Fat</th>
-        <td>22g</td>
+        <th class="bottom-cell">Fat</th>
+        <td class="bottom-cell">22g</td>
       </tr>
     </table>
   </main>
   
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/JoshuaM04">Joshua Martinez</a>.
   </footer>
 </body>
 </html>
